--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="row">
                 <div class="col-md-4 py-2">
 
-                    <img class="logo" src="C:\Users\Syed Sayyaf\Desktop\Web & mobile dev\saylani.png.jpg " alt="logo">
+                    <img class="logo" src="https://www.saylaniwelfare.com/public_html/images/saylani/Saylani-logo.png " alt="logo">
                 </div>
 
                 <div class="col-md-8 text-right py-3 ">
